--- a/java/struts1.3.10/build.xml
+++ b/java/struts1.3.10/build.xml
@@ -3,16 +3,17 @@
 
 <project name="sample-struts" basedir="web" default="deploy">
     <description>This is the first ant sample. And it's also a struts sample.</description>
-    <property file="build.properties" />
+    <property file="../build.properties" />
     <property name="project-name" value="${ant.project.name}" />
     <property name="source" location="${basedir}/WEB-INF/src" />
     <property name="webroot" location="${basedir}" />
-    <property name="tomcat-root" location="${tomcat.root}" />
+
     <property name="dist" location="${basedir}/../dist" />
 
     <target name="clean">
         <echo message="clean temp files" />
         <delete dir="${tomcat-root}/webapps/${project-name}" />
+        <delete file="${dist}/${project-name}.war" />
     </target>
     <target name="prepare" depends="clean">
         <mkdir dir="${webroot}/WEB-INF/classes" />
