--- a/java/Struts2/javaWeb/web/WEB-INF/web.xml
+++ b/java/Struts2/javaWeb/web/WEB-INF/web.xml
@@ -7,6 +7,20 @@
     <display-name>Struts Sample</display-name>
 
     <filter>
+        <filter-name>login</filter-name>
+        <filter-class>com.bejond.filter.LoginFilter</filter-class>
+        <init-param>
+            <param-name>userName</param-name>
+            <param-value>bejond</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>login</filter-name>
+        <url-pattern>/loginFilterTest</url-pattern>
+    </filter-mapping>
+
+    <filter>
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
     </filter>
@@ -15,6 +29,8 @@
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+
 
 
 </web-app>
