--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,5 @@ java/Struts2/struts2_bbs/web/WEB-INF/classes
 java/hibernate/hello_hibernate1/web/WEB-INF/classes
 java/hibernate/hello_hibernate/web/WEB-INF/classes
 java/hibernate/hibernate_idea/web/WEB-INF/classes
+java/hibernate/hibernate_annotation/web/WEB-INF/classes
+java/hibernate/hibernate_annotation/classes/
