reg enable spring

--- a/java/spring/reg/web/WEB-INF/web.xml
+++ b/java/spring/reg/web/WEB-INF/web.xml
@@ -12,4 +12,13 @@
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/classes/applicationContext*.xml,classpath*:applicationContext-*.xml</param-value>
+    </context-param>
 </web-app>
