--- a/java/spring/reg/src/resources/jdbc.properties
+++ b/java/spring/reg/src/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/spring
+jdbc.url=jdbc:mysql://localhost:3306/spring?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=
