servlet helloServlet 服务器跳转 forward

--- a/java/servlet/helloServlet/web/WEB-INF/web.xml
+++ b/java/servlet/helloServlet/web/WEB-INF/web.xml
@@ -12,4 +12,20 @@
         <servlet-name>helloServlet</servlet-name>
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>redirectServlet</servlet-name>
+        <servlet-class>com.bejond.helloServlet.RedirectServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>redirectServlet</servlet-name>
+        <url-pattern>/redirect</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>forwardServlet</servlet-name>
+        <servlet-class>com.bejond.helloServlet.ForwardServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>forwardServlet</servlet-name>
+        <url-pattern>/forward</url-pattern>
+    </servlet-mapping>
 </web-app>
