--- a/java/JSP/JSTL/pom.xml
+++ b/java/JSP/JSTL/pom.xml
@@ -25,6 +25,11 @@
             <version>5.1.38</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 
 </project>
