--- a/java/JSF/helloworld/pom.xml
+++ b/java/JSF/helloworld/pom.xml
@@ -28,8 +28,18 @@
       <artifactId>jsf-impl</artifactId>
       <version>2.1.7</version>
    </dependency>
-	
-    
+      <dependency>
+          <groupId>javax.inject</groupId>
+          <artifactId>javax.inject</artifactId>
+          <version>3</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.inject</groupId>
+          <artifactId>javax.inject</artifactId>
+          <version>1</version>
+      </dependency>
+
+
   </dependencies>
   <build>
       <finalName>helloworld</finalName>
