PrimeFaces not work?

--- a/java/JSF/PrimeFaces/AjaxCore/pom.xml
+++ b/java/JSF/PrimeFaces/AjaxCore/pom.xml
@@ -19,5 +19,9 @@
             <artifactId>jsf-api</artifactId>
             <version>2.1.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+        </dependency>
     </dependencies>
 </project>
