--- a/java/CDI/weldtest/pom.xml
+++ b/java/CDI/weldtest/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>jboss-ejb-api_3.2_spec</artifactId>
             <version>1.0.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
