--- a/java/wholetest/pom.xml
+++ b/java/wholetest/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 </project>
