--- a/java/wholetest/pom.xml
+++ b/java/wholetest/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.5</version>
+        </dependency>
     </dependencies>
 </project>
