--- a/java/wholetest/pom.xml
+++ b/java/wholetest/pom.xml
@@ -39,5 +39,15 @@
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.1-m04</version>
         </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.7.0</version>
+        </dependency>
     </dependencies>
 </project>
