--- a/java/wholetest/pom.xml
+++ b/java/wholetest/pom.xml
@@ -49,5 +49,11 @@
             <artifactId>hanlp</artifactId>
             <version>portable-1.7.0</version>
         </dependency>
+        <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.3</version>
+        </dependency>
     </dependencies>
 </project>
