--- a/java/pom.xml
+++ b/java/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.bejond</groupId>
     <artifactId>java</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
